# jheff.media-site

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
backend/: Cargo.toml  Dockerfile  README.md
backend/scripts/: run-dev.sh
backend/src/: main.rs  secret.key
backend/src/api/: account_controller.rs  admin_controller.rs  contact_controller.rs  content_controller.rs  feed_controller.rs  media_controller.rs  mod.rs  print_controller.rs  schedule_controller.rs  social_controller.rs
backend/src/config/: app.rs  db.rs
backend/src/models/: content.rs  feed.rs  media.rs  mod.rs  response.rs  schedule.rs  social.rs  user.rs  user_token.rs
backend/src/services/: account_service.rs  account_settings_service.rs  contact_service.rs  content_service.rs  content_store_service.rs  feed_service.rs  forward_frontend.rs  instagram_service.rs  media_feed_service.rs  mod.rs  print_service.rs  schedule_service.rs  social_service.rs  youtube_service.rs
backend/src/utils/: auth.rs  token.rs
frontend/: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  package-lock.json  package.json
frontend/src/: app.rs  lib.rs  router.rs
frontend/src/components/: layout.rs  mod.rs
frontend/src/components/admin/: content_admin.rs  mod.rs
frontend/src/components/auth/: auth_modal.rs  controls.rs  login.rs  mod.rs  signup.rs
frontend/src/components/contact/: contact_form.rs  mod.rs
frontend/src/components/content/: content_detail.rs  content_hub.rs  content_summary_card.rs  mod.rs
frontend/src/components/feed/: feed_card.rs  media_card.rs  media_feed_scroll.rs  mod.rs  photo_card.rs  photo_feed.rs  photo_grid.rs
frontend/src/components/home/: hero.rs  instagram_featured.rs  mod.rs
frontend/src/components/layout/: content_nav.rs  footer.rs  header.rs  profile_menu.rs  theme_toggle.rs
frontend/src/components/social/: mod.rs  (+3 more)
frontend/src/context/: auth.rs  mod.rs  theme.rs
frontend/src/model/: auth.rs  content.rs  feed.rs  media.rs  mod.rs  social.rs
frontend/src/routes/: account.rs  booking.rs  contact.rs  content.rs  galleries.rs  gallery_detail.rs  home.rs  legal.rs  mod.rs  other_sites.rs  profile.rs  schedule.rs  shoot_detail.rs  shoots.rs  social.rs
frontend/src/services/: api.rs  mod.rs
frontend/static/: components.css
frontend/styles/: input.css
(+53 files in other folders)
