[package]
name = "jheffmedia-site-backend"
version = "0.0.1"
authors = ["JJ Heffernan <jjcodes@me.com>"]
edition = "2021"
publish = false

[dependencies]
actix-rt = "2.10"
actix-web = "4.13"
actix-cors = "0.7"
log = { workspace = true }
env_logger = "0.11"
url = "2.5"
serde = { workspace = true }
serde_json = { workspace = true }
bson = "2.15"
mongodb = "3.7"
jsonwebtoken = "9.3"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true }
awc = "3.5"
mime_guess = "2.0"
mime = "0.3"
totp-lite = "2.0"
data-encoding = "2.6"
rand = "0.8"

[features]
forward-frontend = []
