[package]
name = "jheffmedia-site-frontend"
version = "0.0.1"
authors = ["JJ Heffernan <jjcodes@me.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.50"
console_log = "1.0.0"
yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"
gloo-net = "0.7"
gloo-storage = "0.4"
anyhow = "1.0"
uuid = { workspace = true, features = ["js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.102", features = ["HtmlInputElement", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
